src/popup/popup.css
.body {
    width: 35rem;
    height: 100%;
}
.nav{
    width: 100%;
    text-align: center;
}
.title{
    font-size: 30px;
    position: relative;
    top: -24px;
    margin: 5px
}
.title-by{
    position: relative;
    top: -26px;
    color: #428952;
    font-size: 15px;
}
.action {
    background-color: #fff;
    border-style: solid;
    border-color: #000;
    border-width: 2px;
    border-radius: 20px;
    width: 49%;
    height: 3rem;
    cursor: pointer;
}
.action-right {
    float: right;
    border-color: #428952;
}
.action-left{
    float: left;
}
.form{
    margin-top: 20px;
}
.input{
    width: 100%;
    height: 40px;
    border-radius: 6px;
    background-color: #fff;
    border-style: solid;
    border-color: #000;
    border-width: 1px;
    padding-left: 5px;
}
.logo{
    height: 4rem;
}
footer{
    margin-top: 2rem;
    padding-bottom: 60px;
}

